exception edited